test/types/records/vass/deinit-parenless-error.good
deinit-parenless-error.chpl:4: error: deinitializers must have parentheses
