test/types/records/vass/deinit-parenless-error.chpl

record R {
  var x: int;
  proc deinit { writeln("R.deinit"); }
}

var r: R;
